--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
 <body>
 
     <header>
-        <!--Search bar, logo, date-->
+        <!--Container for main header-->
         <nav id = "top-nav" class = "flex flex-row justify-between items-center bg-blue-800 text-white px-10 py-4 ">
+
+            <!--Top left logo and name-->
             <div class = "flex items-center">
                 <svg class = "h-12" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
-                  </svg>
-                  <span class ="pl-4 font-bold text-lg">Weather</span>
+                </svg>
+                <span class ="pl-4 font-bold text-lg">Weather</span>
             </div>
+
+            <!--Search bar-->
             <div class = "relative">
-                <input class = "text-white text-xl bg-opacity-10 bg-white rounded-2xl focus:outline-none focus:ring-2 focus:ring-white w-96 py-2 px-4 -ml-10" placeholder = "Search for a City" >
-                <svg class = "absolute top-1.5 right-2 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <input id = "search-bar" class = "text-white text-xl bg-opacity-10 bg-white rounded-2xl focus:outline-none focus:ring-2 focus:ring-white w-96 py-2 px-4 -ml-10" placeholder = "Search for a City" >
+                <svg id = "search-icon" class = "cursor-pointer hover:opacity-50 absolute top-1.5 right-2 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                   </svg>
             </div>
+
+            <!--Today's date-->
             <div>
                 date
             </div>
         </nav>
 
-        <!--History-->
+        <!--Container for secondary header-->
         <nav id = "bottom-nav" class = "flex bg-blue-500 h-10 py-1 px-2 items-center "> 
             <div class = "font-bold px-10 cursor-pointer">City Name</div>
             <div>Another Name</div>
@@ -38,16 +44,34 @@
 
     <main>
         <!--Introduction card. Hidden after first search.-->
-        <article class = "flex flex-col p-6 m-4">
-            <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-1">Welcome!</h1>
-            <p class = "text-center text-xl pt-4">Use the search bar above to get the local weather for any city. If you want to specify by country or state, include those in the search after a comma, such as "Atlanta, Georgia" or "Atlanta, GA". </p>
+        <article class = "flex flex-row justify-center flex-wrap space-x-5 p-6 m-4">
+
+            <div class = "flex flex-col max-w-2xl p-10">
+                <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">Local Weather, Anywhere</h1>
+                <p class = "pt-2 px-2">Quickly find the local weather in cities across the world.</p>
+            </div>
+
+            <div class = "flex flex-col max-w-2xl p-10">
+                <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">5-Day Forecasts</h1>
+                <p class = "pt-2 px-2">Get up-to-date, 5-day-forecasts powered by OpenWeather.</p>
+            </div>    
+            
+            <div class = "flex flex-col max-w-2xl p-10">
+                <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">Get Started Now</h1>
+                <p class = "pt-2 px-2">Enter a city in the search-bar above to get started. Use the format "city, state, country" for the best results.</p>
+            </div> 
+
         </article>
 
         <!--Cards go inside this. Hidden until search is entered-->
         <article class = "flex flex-row justify-center flex-wrap p-6 m-4">
             <div id= "current-weather-card" class = "flex flex-auto p-6 m-4 rounded-xl blue-gradient shadow">
-                <div class = "flex-auto">Temperature</div>
-                <div class = "flex-auto">Icon</div>
+                <div id = "daily-info" class = "flex-auto">
+
+                </div>
+                <div id= "daily-icon" class = "flex-auto">
+                    
+                </div>
             </div>
 
             <div id = "sunrise-card" class = "flex flex-col items-center flex-auto  p-6 m-4 rounded-xl blue-gradient shadow">
@@ -55,7 +79,7 @@
                 <div>Sunset</div>
             </div>
 
-            <div id = "forecast-div" class = "flex space-x-4 justify-between flex-auto p-6 m-4 rounded-xl blue-gradient w-full shadow">
+            <div id = "forecast-card" class = "flex space-x-4 justify-between flex-auto p-6 m-4 rounded-xl blue-gradient w-full shadow">
                 <div>Day 1</div>
                 <div>Day 2</div>
             </div>
@@ -66,4 +90,7 @@
 
     </footer>
 </body>
+
+<script type="module" src="./js/main.js"></script>
+
 </html>
