CSS adjustments and searchBar refactoring

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel = "stylesheet" href = "styles.css">
-    
 </head>
 <body class = "flex flex-col min-h-screen">
 
     <header>
         <!--Container for main header-->
-        <nav id = "top-nav" class = "flex flex-row justify-between items-center bg-blue-800 text-white px-10 py-4 ">
+        <nav id = "top-nav" class = "flex flex-col md:flex-row justify-between items-center bg-blue-800 text-white px-10 pb-8 md:py-4 ">
 
             <!--Top left logo and name-->
-            <div class = "flex items-center">
+            <div class = "flex items-center py-6 md:py-0">
                 <svg class = "h-12" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
                 </svg>
@@ -24,39 +23,41 @@
 
             <!--Search bar-->
             <div class = "relative">
-                <input id = "search-bar" class = "text-white text-xl bg-opacity-10 bg-white rounded-2xl focus:outline-none focus:ring-2 focus:ring-white w-96 py-2 px-4 -ml-10" placeholder = "Search for a City" >
+                <input id = "search-bar" class = "text-white text-xl bg-opacity-10 bg-white rounded-2xl focus:outline-none focus:ring-2 focus:ring-white w-64 md:w-96 py-2 px-4 " placeholder = "Search for a City" >
                 <svg id = "search-icon" class = "cursor-pointer hover:opacity-50 absolute top-1.5 right-2 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                  </svg>
+                </svg>
             </div>
 
-            <!--Today's date-->
+            <!--Github-->
             <div>
-                date
+                <a href="">
+                    <svg class= "hidden md:block filter invert"xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                </a>
             </div>
         </nav>
 
         <!--Container for secondary header-->
-        <nav id = "city-history" class = "flex bg-blue-500 h-10 py-1 px-2 justify-around items-center "> 
-            <div class = "font-bold px-10 cursor-pointer">City Name</div>
+        <nav id = "city-history" class = "flex bg-blue-500 h-10 py-1 px-2 justify-around items-center overflow-auto space-x-4"> 
+            <div class = "font-bold px-10 cursor-pointer"></div>
         </nav>
     </header>
 
     <main class = "flex-grow">
         <!--Introduction card. Hidden after first search.-->
-        <article id="pre-search-cards" class = "flex flex-row justify-center flex-wrap space-x-5 p-6 m-4">
+        <article id="pre-search-cards" class = "flex flex-row justify-center flex-wrap sm:p-2 sm:m-2 space-x-5 p-6 m-4">
 
-            <div class = "flex flex-col max-w-2xl p-10">
+            <div class = "flex flex-col max-w-2xl px-2 py-10 md:p-10">
                 <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">Local Weather, Anywhere</h1>
                 <p class = "pt-2 px-2">Quickly find the local weather in cities across the world.</p>
             </div>
 
-            <div class = "flex flex-col max-w-2xl p-10">
+            <div class = "flex flex-col max-w-2xl px-2 py-10 md:p-10">
                 <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">5-Day Forecasts</h1>
                 <p class = "pt-2 px-2">Get up-to-date, 5-day-forecasts powered by OpenWeather.</p>
             </div>    
             
-            <div class = "flex flex-col max-w-2xl p-10">
+            <div class = "flex flex-col max-w-2xl px-2 py-10 md:p-10 ">
                 <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">Get Started Now</h1>
                 <p class = "pt-2 px-2">Enter a city in the search-bar above to get started. Use the format "city, state, country" for the best results.</p>
             </div> 
@@ -64,8 +65,8 @@
         </article>
 
         <!--Cards go inside this. Hidden until search is entered-->
-        <article id="post-search-cards" class = "flex flex-row justify-center flex-wrap p-6 m-4 hidden">
-            <div id= "current-weather-card" class = "flex flex-auto p-6 m-4 rounded-xl blue-gradient shadow">
+        <article id="post-search-cards" class = "flex flex-row justify-center flex-wrap mt-6 hidden">
+            <div id= "current-weather-card" class = "flex flex-auto rounded-xl blue-gradient shadow p-6 m-4 ">
                 <div id = "daily-info" class = "flex-auto">
 
                 </div>
@@ -74,7 +75,7 @@
                 </div>
             </div>
 
-            <div id = "time-card" class = "flex flex-col items-center flex-auto  p-6 m-4 rounded-xl blue-gradient shadow">
+            <div id = "time-card" class = "flex flex-col flex-auto items-center rounded-xl blue-gradient shadow p-6 m-4 ">
                 <div id = "sunrise-section" class = 'flex flex-col'>
 
                 </div>
@@ -83,22 +84,22 @@
                 </div>
             </div>
 
-            <div id = "forecast-card" class = "flex space-x-4 justify-between items-center flex-auto p-6 m-4 rounded-xl blue-gradient w-full shadow">
+            <div id = "forecast-card" class = "flex flex-col md:flex-row space-x-4 justify-between  p-6 m-4 rounded-xl blue-gradient w-full shadow">
                 <div>Day 1</div>
-                <div>Day 2</div>
+                <div>Day 2</div> 
             </div>
         </article>
     </main>
 
-    <footer>
-        <div>Sunrise/Sunset icons made by <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <footer class = "bg-blue-500 h-12 flex justify-end items-center mt-16">
+        <div class = "px-12 text-sm text-blue-300 text-center">Sunrise/Sunset icons made by <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
 </body>
 
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/luxon/2.0.2/luxon.min.js"></script>
-<script src="./js/buildElements.js"></script>
-<!--SEARC-->
-<script src = "js/buildHistory.js"></script>
-<script type="module" src="./js/main.js"></script>
+<script src = "js/buildElements.js"></script> <!--Here b/c it needs HTML access-->
+<script src = "js/buildHistory.js"></script>  <!--Here b/c it needs HTML access-->
+<script type = "module" src = "js/search.js"></script>
+<script type="module" src="js/main.js"></script>
 
 </html>
