--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <!--Cards go inside this. Hidden until search is entered-->
         <article id="post-search-cards" class = "flex flex-row justify-center flex-wrap mt-6 hidden">
-            <div id= "current-weather-card" class = "flex flex-auto rounded-xl blue-gradient shadow p-6 m-4 ">
+            <div id= "current-weather-card" class = "flex flex-auto flex-col md:flex-row rounded-xl blue-gradient shadow p-6 m-4">
                 <div id = "daily-info" class = "flex-auto">
 
                 </div>
@@ -87,7 +87,7 @@
                 </div>
             </div>
 
-            <div id = "forecast-card" class = "flex flex-col md:flex-row space-x-4 justify-between  p-6 m-4 rounded-xl blue-gradient w-full shadow">
+            <div id = "forecast-card" class = "flex flex-col text-center md:text-left md:flex-row space-x-4 justify-between  p-6 m-4 rounded-xl blue-gradient w-full shadow">
                 <div>Day 1</div>
                 <div>Day 2</div> 
             </div>
