Minor change to instructions in html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             
             <div class = "flex flex-col max-w-2xl px-2 py-10 md:p-10 ">
                 <h1 class = "text-center font-bold border-b-2 border-black text-4xl pb-2">Get Started Now</h1>
-                <p class = "pt-2 px-2">Enter a city in the search-bar above to get started. Use the format "city, state, country" for the best results.</p>
+                <p class = "pt-2 px-2">Enter a city in the search-bar above to get started. Use the format "city", "city, state", or "city, country" for the best results.</p>
                 <img class = "m-auto w-32 py-6 m-0"src = "img/weather_color.png">
             </div> 
 
